# totp-server

./: .dockerignore  .envrc  .gitattributes  .gitignore  .rumdl.toml  .trivyignore  CONTRIBUTING.md  Cargo.toml  CargoLambda.toml  Dockerfile  Justfile  README.md  cliff.toml  codecov.yml  cog.toml  compose.yaml  dev.Dockerfile  encrypted.env  example.env  flake.nix  justfile
.github/: renovate.json
.github/workflows/: build.yml  changelog.yml  checks.yml  cleanup-ghcr.yml  infra-apply.yml  infra-destroy.yml  release.yml  renovate.yml  tests.yml
docs/: releasing.md
hurl/: fallback.hurl  get_root.hurl  health.hurl  totp.hurl
infra/: .terraform.lock.hcl  README.md  encrypted.default.json  main.tf  outputs.tf  providers.tf
infra/aws-common/: README.md  main.tf  variables.tf
infra/aws-lambda/: README.md  main.tf  outputs.tf  variables.tf
infra/tests/: basic.tftest.hcl
src/: config.rs  error.rs  lambda.rs  lib.rs  main.rs  server.rs  service.rs  tests.rs  totp.rs  utils.rs
tests/: app.rs  common.rs  integration.rs  library.rs
