[package]
name = "totp-server"
version = "0.2.0-alpha"
edition = "2024"
authors = ["Yusong Lai <yusonglai64@gmail.com>"]
repository = "https://github.com/whisperpine/totp-server"
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
path = "src/main.rs"
name = "totp-server"

[profile.release]
lto = "thin"
panic = "abort"
strip = "symbols"

[dev-dependencies]
rstest = "0.26.1"

[dev-dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["http2", "charset", "rustls-tls", "json"]

[dependencies]
# web serivce
axum = "0.8.3"
tower_governor = "0.7.0"
tower = { version = "0.5.0", features = ["timeout"] }
# error handling
anyhow = "1.0.98"
thiserror = "2.0.12"
# serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# async
tokio = { version = "1.44.2", features = ["full"] }
# log
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# utility
totp-rs = "5.7.0"
rand = "0.9.1"

# rustc lints (https://doc.rust-lang.org/rustc/lints/index.html)
[lints.rust]
# lint groups (https://doc.rust-lang.org/rustc/lints/groups.html)
rust-2024-compatibility = { level = "warn", priority = -1 }
future-incompatible = { level = "deny", priority = -1 }
deprecated-safe = { level = "deny", priority = -1 }
# lint listing (https://doc.rust-lang.org/rustc/lints/listing/index.html)
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unsafe_code = "deny"

# rustdoc lints (https://doc.rust-lang.org/rustdoc/lints.html)
[lints.rustdoc]
broken_intra_doc_links = "deny"
unescaped_backticks = "deny"

# clippy lints (https://rust-lang.github.io/rust-clippy/master/index.html)
[lints.clippy]
inefficient_to_string = "warn"
rest_pat_in_fully_bound_structs = "warn"
match_wildcard_for_single_variants = "warn"
fn_params_excessive_bools = "warn"
unnested_or_patterns = "warn"
verbose_file_reads = "warn"
uninlined_format_args = "warn"
needless_continue = "warn"
allow_attributes = "warn"
lossy_float_literal = "warn"
option_option = "warn"
macro_use_imports = "warn"
disallowed_types = "deny"
str_to_string = "warn"
suboptimal_flops = "warn"
enum_glob_use = "warn"
filter_map_next = "warn"
imprecise_flops = "warn"
unused_self = "warn"
empty_enum = "warn"
linkedlist = "warn"
mem_forget = "warn"
exit = "warn"
