# ------- #
# package
# ------- #

[package]
name = "totp-server"
version = "0.5.0"
edition = "2024"
authors = ["Yusong Lai <yusonglai64@gmail.com>"]
repository = "https://github.com/whisperpine/totp-server"
license = "MIT OR Apache-2.0"
readme = "README.md"

# --- #
# bin
# --- #

[[bin]]
path = "src/main.rs"
name = "totp-server"

# ------- #
# profile
# ------- #

[profile.release]
lto = "thin"
panic = "abort"
strip = "symbols"

# ------------- #
# linting rules
# ------------- #

# Rustc lints (https://doc.rust-lang.org/rustc/lints/index.html).
[lints.rust]
# lint groups (https://doc.rust-lang.org/rustc/lints/groups.html)
deprecated-safe = { level = "deny", priority = -1 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "warn", priority = -1 }
# lint listing (https://doc.rust-lang.org/rustc/lints/listing/index.html)
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unsafe_code = "deny"

# Rustdoc lints (https://doc.rust-lang.org/rustdoc/lints.html).
[lints.rustdoc]
broken_intra_doc_links = "deny"
unescaped_backticks = "deny"

# Clippy lints (https://rust-lang.github.io/rust-clippy/stable/index.html).
[lints.clippy]
# Clippy lint groups (https://doc.rust-lang.org/stable/clippy/lints.html).
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Indivisual clippy lints (https://rust-lang.github.io/rust-clippy/stable/index.html).
needless_pass_by_value = "allow"
rest_pat_in_fully_bound_structs = "warn"
lossy_float_literal = "warn"
empty_enum_variants_with_brackets = "warn"
verbose_file_reads = "warn"
suboptimal_flops = "warn"
str_to_string = "warn"
integer_division = "warn"
allow_attributes = "warn"
imprecise_flops = "warn"
exit = "warn"

# ---------------- #
# dev-dependencies
# ---------------- #

[dev-dependencies]
rstest = "0.26.1"
reqwest = { version = "0.13.1", features = ["json"] }

# ------------ #
# dependencies
# ------------ #

[dependencies]
# web serivce
axum = "0.8.3"
tower_governor = "0.8.0"
tower = { version = "0.5.0", features = ["timeout"] }
lambda_http = "1.0.0"
# error handling
anyhow = "1.0.98"
thiserror = "2.0.12"
# serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# async
tokio = { version = "1.44.2", features = ["full"] }
# logs, traces, metrics
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-opentelemetry = "0.32.0"
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31.0"
opentelemetry = "0.31.0"
# utility
totp-rs = { version = "5.7.0", features = ["otpauth"] }
qrcode = { version = "0.14.1", default-features = false }
rand = "0.10.0"
